vulkan/wsi: VK_ERROR_NATIVE_WINDOW_IN_USE_KHR is never returned
The spec says:
If pCreateInfo->oldSwapchain is VK_NULL_HANDLE, and the native window referred to by pCreateInfo->surface is already associated with a Vulkan swapchain, VK_ERROR_NATIVE_WINDOW_IN_USE_KHR must be returned.
However we never return this error.
Unfortunately, because of the public VkIcdSurface*
definitions, it doesn't seem like there's a good way to implement this for all WSIs at once.